--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# Archivo: docker-compose.yml
+
 services:
   # Servicio para nuestra API
   api:
@@ -13,7 +15,9 @@ services:
       - API_PORT=4000
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
-      - postgres-db
+      # AHORA DEPENDE DEL ESTADO DE SALUD DEL SERVICIO
+      postgres-db:
+        condition: service_healthy
 
   # Servicio para nuestra base de datos PostgreSQL
   postgres-db:
@@ -25,6 +29,14 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    # --- AÑADIR ESTA SECCIÓN COMPLETA ---
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_DATABASE}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    # --- FIN DE LA SECCIÓN AÑADIDA ---
 
   # NUEVO SERVICIO: Panel de Administración
   admin-panel:
